# win11React

./: .env  .firebaserc  .gitignore  .gitmodules  .npmrc  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.json  craco.config.js  crowdin.yml  dycalendar.css  dycalendar.js  index.html  installer.iss  local.html  package-lock.json  package.json  pnpm-lock.yaml  sw.js  tailwind.config.js  timSort.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  windows-l.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: Build-Deploy.yml  Generate-PR-Preview.yml  Issue-text.yml  PR-Closed.yml  PR-Preview.yml  PR-closed  Prettier-PR.yaml  Update-Deps.yml  brum.yml  can-docker-build.yml  cla.yml  close.yml  codeql-analysis.yml  dependencies.yml  deploy.yml  (+22 more)
public/: 404.html  CNAME  _redirects  console.js  dycalendar.css  dycalendar.js  dycalendar.mjs  electron.js  fullscreen.js  index.html  login.html  manifest.json  react-pwa.js  robots.txt  script.js  service-worker.js  serviceWorker.js  sitemap.xml  style.css  update.txt
src/: .App.jsx.swp  App.js  App.js.bak  App.jsx  InterviewQuestions.md  error.jsx  i18nextConf.js  i18nextConf.ts  index.css  index.js  index.js.bak  index.jsx  local.css  local.jsx  service-worker.js  service-worker.js.bak  serviceWorker.js  serviceWorkerRegistration.js  serviceWorkerRegistration.js.bak  short.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+294 files in other folders)
